--- a/core/igb-i18n/resources/igb_fr.properties
+++ b/core/igb-i18n/resources/igb_fr.properties
@@ -5,7 +5,7 @@ appName=Integrated Genome Browser
 appNameShort=IGB
 appVersion=6.4 ALPHA
 # 0 - appVersion
-appVersionFull={0} (@build.version@)
+appVersionFull={0}
 #0 - serverName
 authOptional=Le serveur "{0}" a demand\u00e9 l'authentification.  L'authentification avec ce serveur est optionelle, toutefois, acc\u00e9der \u00e0 ce serveur anonymement limitera l'acc\u00e9ss aux certains ensembles de donn\u00e9es.
 authToServer=Authentifier avec le Serveur
