--- a/core/igb-i18n/resources/igb_es.properties
+++ b/core/igb-i18n/resources/igb_es.properties
@@ -5,7 +5,7 @@ appName=Integrated Genome Browser
 appNameShort=IGB
 appVersion=6.4 ALPHA
 # 0 - appVersion
-appVersionFull={0} (@build.version@)
+appVersionFull={0}
 #0 - serverName
 authOptional=The server "{0}" requested authentication.  Authentication to this server is optional however accessing this server anonymously will limit what data sets you can access.
 authToServer=Authenticate to Server
